--- a/game.html
+++ b/game.html
@@ -21,10 +21,10 @@
 	<body>
 	<div id="canvas"></div>
 	<!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
-	<script src="assets/protoclass.js"></script>
-	<script src='assets/box2d.js'></script>
-	<script src='assets/Main.js'></script>
-	<script src="assets/jQuery.js"></script>
-	<script src="assets/init.js"></script>
+	<script src="game/protoclass.js"></script>
+	<script src='game/box2d.js'></script>
+	<script src='game/Main.js'></script>
+	<script src="game/jQuery.js"></script>
+	<script src="game/init.js"></script>
 	</body>
 </html>
