--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 					</li>
 					<li><a href="contact.html">联系</a></li>
 					<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">游戏 <b class="caret"></b></a>
+					<a class="dropdown-toggle" data-toggle="dropdown">游戏 <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
 							<li><a href="game.html">跳球</a></li>
 							<li><a href="game2.html">魔幻</a></li>
 						</ul>
