--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</li>
 					<li><a href="contact.html">联系</a></li>
 					<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown">游戏 <b class="caret"></b></a>
+					<a href="game2.html" class="dropdown-toggle" data-toggle="dropdown">游戏 <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="game.html">跳球</a></li>
 							<li><a href="game2.html">魔幻</a></li>
