--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
 						</ul>
 					</li>
 					<li><a href="contact.html">联系</a></li>
-					<li class="dropdown">
-					<a href="game2.html" class="dropdown-toggle" data-toggle="dropdown">游戏 <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="game.html">跳球</a></li>
-							<li><a href="game2.html">魔幻</a></li>
+					<li><a href="game2.html">魔幻</a></li>
 						</ul>
 					</li>
 					
@@ -205,7 +201,7 @@
                   <img class="img-circle" src="assets/images/person_4.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>活出自己的精彩</p>
+                  <p>活出精彩，做最好的自己。</p>
                   <small>自己</small>
                 </div>
               </div>
@@ -323,8 +319,8 @@
 								<a href="about.html">关于</a> |
 								<a href="services.html">服务</a> |
 								<a href="portfolio.html">项目</a> |
-								<a href="contact.html">联系</a> 
-								<a href="game.html">轻松</a> 
+								<a href="contact.html">联系</a> |
+								<a href="game.html">跳球</a> 
 							</p>
 						</div>
 					</div>
