--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 					</li>
 					<li><a href="contact.html">联系</a></li>
 					<li><a href="game2.html">魔幻</a></li>
+					<li><a href="game.html">跳球</a></li>
 						</ul>
 					</li>
 					
