--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Mirocast	focus on the development of smart device and Internet of things.">
+	<meta name="description" content="Mirocas focus on the development of smart device and Internet of things.">
 	<meta name="author" content="webThemez.com">	
 	<title>Mirocast</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
@@ -32,14 +32,14 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="#">主页</a></li>
-					<li><a href="about.html">关于</a></li><li><a href="services.html">服务</a></li><li><a href="portfolio.html">项目</a></li>
+					<li><a href="404error.html">关于</a></li><li><a href="404error.html">服务</a></li><li><a href="404error.html">项目</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">页面 <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="sidebar-right.html">Right Sidebar</a></li>
 							<li><a href="#">Dummy Link1</a></li>
 							<li><a href="#">Dummy Link2</a></li>
-							<li><a href="#">Dummy Link3</a></li>
+		
 						</ul>
 					</li>
 					<li><a href="contact.html">联系</a></li>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-sm-9">
                   <p>活出精彩，做最好的自己。</p>
-                  <small>自己</small>
+                  <small>Steven</small>
                 </div>
               </div>
             </blockquote>
@@ -273,9 +273,9 @@
 						<h3 class="panel-title">About Mirocast</h3>
 						<div class="panel-body">
 							<p>互利共赢，客户第一</p>
-							<p>团队协作，开拓创新</p>
+							<p>团队协作，开拓进取</p>
 							<p>拥抱变化，持续成长</p>
-							<p>诚信高效，言出必行</p>
+							<p>诚信高效，勇于创新</p>
 						</div>
 					</div>
 
@@ -321,7 +321,8 @@
 								<a href="services.html">服务</a> |
 								<a href="portfolio.html">项目</a> |
 								<a href="contact.html">联系</a> |
-								<a href="game.html">跳球</a> 
+								<a href="game.html">跳球</a> | 
+								<a href="game2.html">魔幻</a> | 
 							</p>
 						</div>
 					</div>
