--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Mirocas focus on the development of smart device and Internet of things.">
-	<meta name="author" content="webThemez.com">	
+	<meta name="modify" content="mirocast.com">	
 	<title>Mirocast</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -34,17 +34,18 @@
 					<li class="active"><a href="#">主页</a></li>
 					<li><a href="404error.html">关于</a></li><li><a href="404error.html">服务</a></li><li><a href="404error.html">项目</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">页面 <b class="caret"></b></a>
+						<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">页面<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="sidebar-right.html">Right Sidebar</a></li>
 							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>
-		
+							<li><a href="#">Dummy Link2</a></li>	
 						</ul>
 					</li>
+					<li><a href="http://www.taobao.com/">商城</a></li>
+					<li><a href="404error.html">论坛</a></li>
 					<li><a href="contact.html">联系</a></li>
 					<li><a href="game2.html">魔幻</a></li>
-					<li><a href="game.html">跳球</a></li>
+					<li><a href="game.html">跳球</a></li>	
 						</ul>
 					</li>
 					
@@ -62,7 +63,7 @@
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
                         <h2>Responsive Website</h2>
-                        <p>Amazing free responsive website for free, use it for your personal or commercial needs</p>
+                        <p>Mirocast Website</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
@@ -93,7 +94,7 @@
 	<!-- Intro -->
 	<div class="container text-center">
 		<br> 
-		<h2 >Mirocast专注于物联网智能硬件</h2>
+		<h2 >Mirocast专注于物联网智能硬件,打造万物互联平台</h2>
 		<p class="text-muted">
 			Working together, we can make a world of difference.<br/>
 			人生，越努力越幸运。
@@ -123,7 +124,7 @@
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption"><h4><i class="fa fa-lightbulb-o fa-2x circle"></i>Server Designing</h4></div>
 					<div class="h-body text-center">
-						<p>服务器搭建</p>
+						<p>服务器和网站搭建</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
@@ -152,25 +153,25 @@
                 <div class="col-md-4 col-sm-4">
                     <h3><i class="fa fa-desktop color"></i>&nbsp; What we do?</h3>
                     <!-- Paragraph -->
-                    <p>智能花盆、智能鱼缸、智能灯、四旋翼飞行器</p>
+                    <p>  智能插座、智能灯、四旋翼飞行器...</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
                     <h3><i class="fa fa-cloud color"></i>&nbsp;Why choose us?</h3>
                     <!-- Paragraph -->
-                    <p>自主研发，拥有核心技术</p>
+                    <p>  自主研发，拥有核心技术</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
                     <h3><i class="fa fa-home color"></i>&nbsp;Where are we?</h3>
                     <!-- Paragraph -->
-                    <p>中国硅谷·深圳南山</p>
+                    <p>  中国硅谷·深圳南山</p>
                 </div>
             </div>
         </div>
 	<div class="container">
 		<div class="jumbotron top-space">
-			<p>Make things better</p>
+			<p>  Make things better  </p>
      		<p class="text-right"><a class="btn btn-primary btn-large">Learn more..</a></p>
   		</div>
 
@@ -320,6 +321,7 @@
 								<a href="about.html">关于</a> |
 								<a href="services.html">服务</a> |
 								<a href="portfolio.html">项目</a> |
+								<a href="http://www.taobao.com">商城</a> |
 								<a href="contact.html">联系</a> |
 								<a href="game.html">跳球</a> | 
 								<a href="game2.html">魔幻</a> | 
