--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Mirocas focus on the development of smart device and Internet of things.">
-	<meta name="modify" content="mirocast.com">	
+	<meta name="author" content="mirocast.com">	
 	<title>Mirocast</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -62,23 +62,23 @@
             <div class="banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
-                        <h2>Responsive Website</h2>
-                        <p>Mirocast Website</p>
+                        <h2>Mirocast Technologe</h2>
+                        <p>Connecting things make life much more wonderful.</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>Bootstrap</h2>
-                        <p>Bootstrap, a sleek, intuitive, and powerful mobile first front-end framework.</p>
+                        <h2>SmartPot/Planbox</h2>
+                        <p>Smart Pot, a funny, creative, and powerful smart device make plant so easy.</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>HTML5/CSS3</h2>
-                        <p>HTML5 is a markup language used for structuring and presenting content for the World Wide Web.</p>
+                        <h2>miniCopter</h2>
+                        <p>A wifi controlled quadrotor.</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>JavaScript/jQuery</h2>
-                        <p>jQuery: The Write Less, Do More, JavaScript Library.</p>
+                        <h2>Smart lamp/lock</h2>
+                        <p>No more introduction，coming Soon...</p>
                         <div class="da-img"></div>
                     </div>
                     <nav class="da-arrows">
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-lightbulb-o fa-2x circle"></i>Server Designing</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-lightbulb-o fa-2x circle"></i>Server&Web Designing</h4></div>
 					<div class="h-body text-center">
 						<p>服务器和网站搭建</p>
 					</div>
@@ -203,8 +203,8 @@
                   <img class="img-circle" src="assets/images/person_4.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>活出精彩，做最好的自己。</p>
-                  <small>Steven</small>
+                  <p>努力奋斗，创造美好生活。</p>
+                  <small>Christy</small>
                 </div>
               </div>
             </blockquote>
@@ -217,8 +217,8 @@
                   <img class="img-circle" src="assets/images/person_2.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>勇敢坚毅真正之才智乃刚毅之志向。</p>
-                  <small>拿破仑·波拿巴</small>
+                  <p>专心做好一件事。</p>
+                  <small>Steven</small>
                 </div>
               </div>
             </blockquote>
@@ -231,8 +231,8 @@
                   <img class="img-circle" src="assets/images/person_3.png" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>All will be alright!</p>
-                  <small>Someone famous</small>
+                  <p>All will be alright, nothing is impossible!</p>
+                  <small>Charlin</small>
                 </div>
               </div>
             </blockquote>
