--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="#">主页</a></li>
-					<li><a href="404error.html">关于</a></li><li><a href="404error.html">服务</a></li><li><a href="404error.html">项目</a></li>
+					<li><a href="404error.html">关于</a></li><li><a href="loading/loading.html">服务</a></li><li><a href="loading/loading.html">项目</a></li>
 					<li class="dropdown">
 						<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">页面<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -42,7 +42,7 @@
 						</ul>
 					</li>
 					<li><a href="http://www.taobao.com/">商城</a></li>
-					<li><a href="404error.html">论坛</a></li>
+					<li><a href="loading/loading.html">论坛</a></li>
 					<li><a href="contact.html">联系</a></li>
 					<li><a href="game2.html">魔幻</a></li>
 					<li><a href="game.html">跳球</a></li>	
@@ -62,12 +62,12 @@
             <div class="banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
-                        <h2>Mirocast Technologe</h2>
+                        <h2>Mirocast</h2>
                         <p>Connecting things make life much more wonderful.</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>SmartPot/Planbox</h2>
+                        <h2>SmartPot</h2>
                         <p>Smart Pot, a funny, creative, and powerful smart device make plant so easy.</p>
                         <div class="da-img"></div>
                     </div>
@@ -77,8 +77,8 @@
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>Smart lamp/lock</h2>
-                        <p>No more introduction，coming Soon...</p>
+                        <h2>Smart Lamp</h2>
+                        <p>Making life brighter and colorful</p>
                         <div class="da-img"></div>
                     </div>
                     <nav class="da-arrows">
@@ -130,7 +130,7 @@
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption"><h4><i class="fa fa-desktop fa-2x circle"></i>Smart Device</h4></div>
 					<div class="h-body text-center">
-						<p>智能产品</p>
+						<p>WiFi智能产品</p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
