--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Mirocas focus on the development of smart device and Internet of things.">
-	<meta name="author" content="mirocast.com">	
+	<meta name="description" content="Mirocast focus on the development of smart device and Internet of things.">
+	<meta name="author" content="www.mirocast.com">	
 	<title>Mirocast</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -27,7 +27,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Mirocast Website"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Mirocast Homepage"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -67,8 +67,8 @@
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>SmartPot</h2>
-                        <p>Smart Pot, a funny, creative, and powerful smart device make plant so easy.</p>
+                        <h2>Smart Pot</h2>
+                        <p>Smart Pot, a funny, creative, and powerful smart device make plant attractive.</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
@@ -94,7 +94,7 @@
 	<!-- Intro -->
 	<div class="container text-center">
 		<br> 
-		<h2 >Mirocast专注于物联网智能硬件,打造万物互联平台</h2>
+		<h2 >Mirocast专注于物联网,打造万物互联智能硬件</h2>
 		<p class="text-muted">
 			Working together, we can make a world of difference.<br/>
 			人生，越努力越幸运。
@@ -159,7 +159,7 @@
                     <!-- Heading -->
                     <h3><i class="fa fa-cloud color"></i>&nbsp;Why choose us?</h3>
                     <!-- Paragraph -->
-                    <p>  自主研发，拥有核心技术</p>
+                    <p>  自主研发，拥有核心关键技术</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
@@ -217,7 +217,7 @@
                   <img class="img-circle" src="assets/images/person_2.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>专心做好一件事。</p>
+                  <p>认认真真专心做好一件事。</p>
                   <small>Steven</small>
                 </div>
               </div>
@@ -228,7 +228,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="assets/images/person_3.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="assets/images/person_3.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>All will be alright, nothing is impossible!</p>
@@ -286,8 +286,8 @@
 						<p>--可通过如下方式与我们联系--</p>
 						<ul>
 						  <li><i class="fa fa-phone"></i>188-****-****</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> chinglyn@163.com</a></li>
-						  <li><i class="fa fa-flag"></i>深圳市南山区科技园彩虹科技大厦</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i>chinglyn@163.com</a></li>
+						  <li><i class="fa fa-flag"></i>深圳市南山区科技园彩虹科技大厦6楼</li>
 						</ul> 
 						</div>
 					</div>
