--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 					<li><a href="loading/loading.html">论坛</a></li>
 					<li><a href="contact.html">联系</a></li>
 					<li><a href="game2.html">魔幻</a></li>
-					<li><a href="game.html">跳球</a></li>	
+					<li><a href="game.html">跳球</a></li>
+					<li><a href="FishingMaster/index.html">捕鱼</a></li>
 						</ul>
 					</li>
 					
