--- a/FishHunter/FishHunter.html
+++ b/FishHunter/FishHunter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Fish Joy in Mirocast</title>
 	<style>
 		*{margin:0;padding:0;}
 		body{background:#000;}
