--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Mirocast focus on the development of smart device and Internet of things.">
-	<meta name="keywords" content="米霓网，米霓科技，物联网，智能硬件，IOT,AI,AI&IOT,智慧物联网" />
+	<meta name="keywords" content="米霓网，米霓科技，农业物联网，智能硬件，IOT,AI,AI&IOT,智慧物联网" />
 	<meta name="author" content="www.mirocast.com">	
 	<title>Mirocast-米霓科技</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
@@ -35,18 +35,17 @@
 					<li class="active"><a href="#">主页</a></li>
 					<li><a href="404error.html">关于</a></li><li><a href="loading/loading.html">服务</a></li><li><a href="loading/loading.html">项目</a></li>
 					<li class="dropdown">
-						<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">页面<b class="caret"></b></a>
+						<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">项目<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>	
+							<li><a href="game2.html">幻影</a></li>
+							<li><a href="plantsVSzombies/plantsVSzombies.html">植物大战僵尸</a></li>
+							<li><a href="FishHunter/FishHunter.html">捕鱼猎手</a></li>
+							<li><a href="game.html">跳球小游戏</a></li>
 						</ul>
 					</li>
 					<li><a href="http://www.taobao.com/">商城</a></li>
 					<li><a href="loading/loading.html">论坛</a></li>
 					<li><a href="contact.html">联系</a></li>
-					<li><a href="game2.html">魔幻</a></li>
-					<li><a href="game.html">跳球</a></li>
 					<li><a href="FishingMaster/index.html">捕鱼</a></li>
 						</ul>
 					</li>
