--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Mirocast focus on the development of smart device and Internet of things.">
-	<meta name="keywords" content="米霓网，米霓科技，农业物联网，智能硬件，IOT,AI,AI&IOT,智慧物联网" />
+	<meta name="keywords" content="农业物联网，智能硬件，IOT,AI,AI&IOT,智慧物联网" />
 	<meta name="author" content="www.mirocast.com">	
-	<title>Mirocast-米霓科技</title>
+	<title>Mirocast</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
