--- a/FishingMaster/index.html
+++ b/FishingMaster/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <link rel="apple-touch-icon" href="images/icon.png"/>
@@ -21,7 +22,7 @@ body, html{height: 100%;}
 #middle[id]{display:table-cell; vertical-align:middle; position:static;}
 </style>
 
-<title>Fish Joy in Mirocast</title>
+<title>Fish Joy in Meanea</title>
 
 <script type="text/javascript" src="js/quark.base-1.0.0.alpha.min.js"></script>
 <!--<script type="text/javascript" src="fishjoy.game.js"></script>-->
